language/move-lang/tests/move_check/dependencies/cycle_2.move
address 0x2 {

module A {
    public fun foo() {
        0x2::B::foo()
    }
}

module B {
    public fun foo() {
        0x2::A::foo()
    }
}

}
